Refactoring methods names and swagger update
