# src/modules/exercises/routeControllers/exercises.routeController.ts
@@ -30,7 +30,7 @@ export class ExercisesRouteController {
         }
     }
 
-    public addExercise = async (req: Request, res: Response) => {
+    public createExercise = async (req: Request, res: Response) => {
         try {
 
             const { series, reps, weight, time, name, description, image, video } = req.body;
@@ -38,8 +38,21 @@ export class ExercisesRouteController {
             if (!name) { return res.status(400).send({ message: "NAME_IS_MANDATORY" }); }
 
             const newExercise = await this.exercisesBusinessController.
-                addExercise(new Exercise(series, reps, weight, time, name, description, image, video));
+                createExercise(new Exercise(null, series, reps, weight, time, name, description, image, video));
             return res.status(201).send(newExercise);
+        } catch (error) {
+            return res.status(400).send({ message: error });
+        }
+    }
+
+    public updateExercise = async (req: Request, res: Response) => {
+        try {
+
+            const { exerciceId, series, reps, weight, time, name, description, image, video } = req.body;
+
+            const updatedExercise = await this.exercisesBusinessController.
+                updateExercise(new Exercise(exerciceId, series, reps, weight, time, name, description, image, video));
+            return res.status(201).send(updatedExercise);
         } catch (error) {
             return res.status(400).send({ message: error });
         }
