# src/modules/trainings/routes.ts
@@ -13,8 +13,9 @@ export class Routes {
     private configureRoutes(app: Express) {
         app.route("/trainings").get(this.routeController.getTrainings);
         app.route("/trainings/:type").get(this.routeController.getTrainingsByType);
-        app.route("/trainings").post(this.routeController.addTraining);
-        app.route("/trainings/:trainingId").patch(this.routeController.editTraining);
+        app.route("/trainings").post(this.routeController.createTraining);
+        app.route("/trainings/:trainingId").get(this.routeController.getTrainingsById);
+        app.route("/trainings/:trainingId").patch(this.routeController.updateTraining);
         app.route("/trainings/:trainingId").delete(this.routeController.deleteTraining);
     }
 }
